Fixed problem with too short container on 404 page

--- a/src/sass/error404.scss
+++ b/src/sass/error404.scss
@@ -7,7 +7,8 @@
   @include flex();
 
   &__container {
-    width: 70%;
+    width: 100%;
+    max-width: 1100px;
   }
 
   &__text {
